--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -9,7 +9,7 @@ global:
   pvc:
     storage:
       size: 1Gi
-      storageClassName: test
+      storageClass: test
   ingress:
     className: traefik
   rbac:
@@ -118,7 +118,7 @@ components:
             storage:
               accessMode: ReadWriteOnce
               size: 1Gi
-              storageClassName: local-path
+              storageClass: local-path
         - name: data-2
           pvc:
             name: data-2-pvc
@@ -126,7 +126,7 @@ components:
             storage:
               accessMode: ReadWriteOnce
               size: 2Gi
-              storageClassName: local-path
+              storageClass: local-path
         - name: config
           configMap:
             data:
