revrt tio storageClassName

--- a/charts/commons/templates/cnpg/cluster.yaml
+++ b/charts/commons/templates/cnpg/cluster.yaml
@@ -24,7 +24,7 @@ spec:
   {{- end }}
   storage:
     size: {{ default $.Values.addons.postgres.storage.size (default dict .storage).size }}
-    storageClass: {{ default $.Values.addons.postgres.storage.storageClass (default dict .storage).storageClass }}
+    storageClass: {{ default $.Values.addons.postgres.storage.storageClassName (default dict .storage).storageClassName }}
   {{- if .repository}}
   imageName: {{ .repository.image | default $.Values.addons.postgres.image.repository }}:{{ .repository.tag | default $.Values.addons.postgres.image.tag }}
   {{- else }}
