--- a/charts/commons/values.yaml
+++ b/charts/commons/values.yaml
@@ -23,7 +23,8 @@ addons:
     image:
       repository: codercom/code-server
       tag: 39
-    port: 8080
+    service:
+      port: 8080
     ingress:
       enabled: false
   redis:
