--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         {{- range $index, $volume := .volumes }}
           {{- with $volume.configMap }}
             {{- with .data }}
-        configmap-hash-{{ $index }}: {{ .data  | sha256sum | trunc 63 }}
+        configmap-hash-{{ $index }}: {{ .data | toYaml | sha256sum | trunc 63 }}
             {{- end }}
           {{- end }}
         {{- end }}
