--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -195,7 +195,7 @@ addons:
       tag: 8.2.1
     port: 6379
     password: changeme
-  pgAdmin:
+  pgadmin:
     enabled: true
   postgres:
     enabled: true
