--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -108,6 +108,8 @@ spec:
           command:
             {{ toYaml . | nindent 12 }}
           {{- end }}
+          args-debug:
+            {{- toYaml .args | nindent 12 }}
           {{- with .args }}
           args:
             {{ toYaml . | nindent 12 }}
