--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -104,7 +104,7 @@ spec:
         - name: {{ default $component.name .name }}
           image: {{ .image.repository }}:{{ .image.tag | default "latest" }}
           command: ["printenv"]
-          args: ["HOSTNAME", "KUBERNETES_PORT"]
+          args: {{ .args | fromYamlArray }}
           {{- with .securityContext }}
           {{- with .command }}
           command:
