--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -106,7 +106,7 @@ spec:
           command: ["printenv"]
           args:
           {{- range .args }}
-            - {{ . }}
+            - {{ . | quote }}
           {{- end }}
           {{- with .securityContext }}
           {{- with .command }}
