--- a/charts/commons/values.yaml
+++ b/charts/commons/values.yaml
@@ -18,8 +18,8 @@ addons:
   vscode:
     enabled: false
     image:
-      repository: codercom/code-server
-      tag: 39
+      repository: linuxserver/code-server
+      tag: v4.104.2
     service:
       port: 8080
     ingress:
