--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -92,7 +92,7 @@ tests:
           value: codercom/code-server:39
       - equal:
           path: spec.template.spec.containers[0].volumeMounts[0].mountPath
-          value: "/home/coder/.config"
+          value: "/config"
       - equal:
           path: spec.template.spec.containers[0].volumeMounts[0].name
           value: "vscode-config"
@@ -103,16 +103,16 @@ tests:
           path: spec.template.spec.volumes[0].persistentVolumeClaim.claimName
           value: "test-code-server-vscode-config"
       - equal:
-          path: spec.template.spec.containers[0].volumeMounts[2].mountPath
-          value: "/config/toto"
+          path: spec.template.spec.containers[0].volumeMounts[1].mountPath
+          value: "/config/workspace/toto"
       - equal:
-          path: spec.template.spec.containers[0].volumeMounts[2].name
+          path: spec.template.spec.containers[0].volumeMounts[1].name
           value: "toto"
       - equal:
-          path: spec.template.spec.volumes[2].name
+          path: spec.template.spec.volumes[1].name
           value: "toto"
       - equal:
-          path: spec.template.spec.volumes[2].persistentVolumeClaim.claimName
+          path: spec.template.spec.volumes[1].persistentVolumeClaim.claimName
           value: "test-nginx-data-2-pvc"
 
   - it: Vérifie le Deployment redis
