--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -89,7 +89,7 @@ tests:
           value: 1
       - equal:
           path: spec.template.spec.containers[0].image
-          value: codercom/code-server:39
+          value: linuxserver/code-server:v4.104.2
       - equal:
           path: spec.template.spec.containers[0].volumeMounts[0].mountPath
           value: "/config"
