--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -174,7 +174,7 @@ addons:
   vscode:
     enabled: true
     image:
-      tag: v4.104.2
+      tag: 4.104.2
     service:
       port: 8080
     volumes:
