--- a/charts/commons/tests/pgadmin_test.yaml
+++ b/charts/commons/tests/pgadmin_test.yaml
@@ -14,12 +14,7 @@ tests:
       - templates/configmap.yaml
     asserts:
       - equal:
-          path: data["pgpass"]
-          value: |-
-            test-nginx-postgres-rw:5432:postgres:changeme:changeme
-            test-postgres-rw:5432:postgres:changeme:changeme
-      - equal:
-          path: data["server.json"]
+          path: data["servers.json"]
           value: |-
             {
               "Servers": {
@@ -29,8 +24,7 @@ tests:
                   "Port": 5432,
                   "Username": "changeme",
                   "Host": "test-nginx-postgres-rw",
-                  "MaintenanceDB": "postgres",
-                  "PassFile": "/pgpass"
+                  "MaintenanceDB": "postgres"
                 },
                 "1": {
                   "Name": "postgres",
@@ -38,8 +32,7 @@ tests:
                   "Port": 5432,
                   "Username": "changeme",
                   "Host": "test-postgres-rw",
-                  "MaintenanceDB": "postgres",
-                  "PassFile": "/pgpass"
+                  "MaintenanceDB": "postgres"
                 }
               }
             }
