--- a/charts/commons/tests/pgadmin_test.yaml
+++ b/charts/commons/tests/pgadmin_test.yaml
@@ -13,6 +13,12 @@ tests:
     templates:
       - templates/configmap.yaml
     asserts:
+    
+      - equal:
+          path: data["pgpass"]
+          value: |-
+            test-nginx-postgres-rw:5432:postgres:changeme:changeme
+            test-postgres-rw:5432:postgres:changeme:changeme
       - equal:
           path: data["servers.json"]
           value: |-
@@ -24,7 +30,8 @@ tests:
                   "Port": 5432,
                   "Username": "changeme",
                   "Host": "test-nginx-postgres-rw",
-                  "MaintenanceDB": "postgres"
+                  "MaintenanceDB": "postgres",
+                  "PassFile": "/pgpass"
                 },
                 "1": {
                   "Name": "postgres",
@@ -32,7 +39,8 @@ tests:
                   "Port": 5432,
                   "Username": "changeme",
                   "Host": "test-postgres-rw",
-                  "MaintenanceDB": "postgres"
+                  "MaintenanceDB": "postgres",
+                  "PassFile": "/pgpass"
                 }
               }
             }
