fix no serverrce

--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -144,7 +144,7 @@ spec:
               {{- end }}
             {{- end }}
           {{- end }}
-          {{- if or .additionalsPorts $component.service.ports }}
+          {{- if or .additionalsPorts  (and $component.service $component.service.ports) }}
           ports:
             {{- range $component.service.ports }}
             - name: {{ .name }}
