--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -57,6 +57,17 @@ global:
           - list
 components:
   - name: nginx
+    cronjob:
+      schedule: '0 3 * * *'
+      successfulJobsHistoryLimit: 3
+      failedJobsHistoryLimit: 1
+      env:
+        - name: ENV
+          value: prod
+      image:
+        repository: nginx
+        tag: latest
+      
     deployment:
       replicas: 2
       initContainers:
