--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -204,6 +204,8 @@ addons:
     password: changeme
   pgadmin:
     enabled: true
+    image:
+      tag: 9.8.0
   postgres:
     enabled: true
     image:
