--- a/charts/commons/tests/cronjob_test.yaml
+++ b/charts/commons/tests/cronjob_test.yaml
@@ -1,7 +1,10 @@
 suite: Test CronJob template
+values:
+  - ./values/values.yaml
 templates:
-  - cronjob.yaml
-
+  - templates/cronjob.yaml
+release:
+  name: test
 tests:
   - it: Vérifie le Deployment web
     documentSelector:
