--- a/charts/commons/templates/cronjob.yaml
+++ b/charts/commons/templates/cronjob.yaml
@@ -14,6 +14,7 @@ spec:
   {{- with .concurrencyPolicy}}
   startingDeadlineSeconds: {{ . }}
   {{- end }}
+  restartPolicy: {{ default "Never" .restartPolicy }}
   successfulJobsHistoryLimit: {{ default 5 .successfulJobsHistoryLimit }}
   failedJobsHistoryLimit: {{ default 5 .failedJobsHistoryLimit }}
   {{- with .suspend}}
