--- a/charts/commons/templates/cronjob.yaml
+++ b/charts/commons/templates/cronjob.yaml
@@ -14,7 +14,7 @@ spec:
   {{- with .concurrencyPolicy}}
   startingDeadlineSeconds: {{ . }}
   {{- end }}
-  restartPolicy: {{ default "Never" .restartPolicy }}
+  restartPolicy: {{ default "Never" .restartPolicy | quote }}
   successfulJobsHistoryLimit: {{ default 5 .successfulJobsHistoryLimit }}
   failedJobsHistoryLimit: {{ default 5 .failedJobsHistoryLimit }}
   {{- with .suspend}}
