--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -24,7 +24,7 @@ spec:
         {{- range $index, $volume := .volumes }}
           {{- with $volume.configMap }}
             {{- with .data }}
-        configmap-{{ default $index $volume.name }}-hash: {{ .data | toYaml | sha256sum | trunc 63 }}
+        checksum/{{ default $index $volume.name }}: {{ .data | toYaml | sha256sum }}
             {{- end }}
           {{- end }}
         {{- end }}
