--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           {{- with $volume.configMap }}
             {{- with .data }}
         checksum/{{ default $index $volume.name }}: {{ printf "%v" .data | sha256sum }}
-        checksum/{{ default $index $volume.name }}: {{ $volume | toYaml }}
+        checksum/{{ default $index $volume.name }}: {{ $volume }}
             {{- end }}
           {{- end }}
         {{- end }}
