--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           {{- with $volume.configMap }}
             {{- with $volume.configMap.data }}
         checksum/{{ default $index $volume.name }}: {{ printf "%v" $volume.configMap.data | sha256sum }}
-        checksum/{{ default $index $volume.name }}: {{ $volume.configMap.data }}
+        checksum/{{ default $index $volume.name }}: {{ $volume.configMap.data | sha256sum}}
             {{- end }}
           {{- end }}
         {{- end }}
