--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -24,7 +24,7 @@ spec:
         {{- range $index, $volume := .volumes }}
           {{- with $volume.configMap }}
             {{- with $volume.configMap.data }}
-        checksum/{{ default $index $volume.name }}: {{ printf "%v" $volume.configMap.data | sha256sum }}
+        checksum/{{ default $index $volume.name }}: {{ printf "%v" $volume.configMap.data | sha256sum | trunc 63 }}
             {{- end }}
           {{- end }}
         {{- end }}
