--- a/charts/commons/templates/secret.yaml
+++ b/charts/commons/templates/secret.yaml
@@ -4,8 +4,8 @@
 {{- range $component.secrets }}
 apiVersion: v1
 data:
-{- range $filename, $content := .data }}
-  {{ $filename }}: {{ $content }}
+{- range $name, $content := .data }}
+  {{ $name }}: {{ $content | b64enc | quote }}
 {{- end }}
 kind: Secret
 metadata:
