--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -71,7 +71,7 @@ components:
     secrets:
       - name: toto
         data:
-          tata: tutu
+          - tata: tutu
 
     deployment:
       replicas: 2
