--- a/charts/commons/templates/secret.yaml
+++ b/charts/commons/templates/secret.yaml
@@ -4,7 +4,7 @@
 {{- range $component.secrets }}
 apiVersion: v1
 data:
-{- range $name, $content := .data }}
+{{- range $name, $content := .data }}
   {{ $name }}: {{ $content | b64enc | quote }}
 {{- end }}
 kind: Secret
