--- a/charts/commons/templates/cronjob.yaml
+++ b/charts/commons/templates/cronjob.yaml
@@ -153,7 +153,7 @@ spec:
               resources:
                 {{- toYaml . | nindent 12 }}
               {{- end }}
-            {{ include "commons.sidecars" (dict "component" $component "Values" $.Values) | nindent 8 }}
+            {{ include "containers.sidecars" (dict "component" $component "Values" $.Values) | nindent 8 }}
           {{- with .volumes }}
           volumes:
             {{- range . }}
