--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -152,7 +152,7 @@ spec:
           resources:
              {{- toYaml . | nindent 12 }}
           {{- end }}
-        {{ include "container.sidecars" (dict "component" $component "Values" $.Values) | nindent 8 }}
+        {{ include "containers.sidecars" (dict "component" $component "Values" $.Values) | nindent 8 }}
       {{- with .volumes }}
       volumes:
         {{- range . }}
