--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -76,7 +76,7 @@ spec:
             {{ toYaml . | nindent 12 }}
           {{- end }}
           {{- with .env }}
-          {{- include "containers.envs" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .) | nindent 10 }}
+          {{- include "containers.envs" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component) | nindent 10 }}
           {{- end }}
           {{- with .volumeMounts }}
           volumeMounts:
