--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -144,7 +144,7 @@ spec:
             {{- end }}
           {{- end }}
           
-          {{ include "containers.probes" . | nindent 10 }}
+          {{ include "containers.probes" "component" $component | nindent 10 }}
 
           {{- with .resources }}
           resources:
